--- a/gb/19/11/3/n11629802.md
+++ b/gb/19/11/3/n11629802.md
@@ -1,53 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lpbpi2994/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/lpbpi2994/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/lpbpi2994/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>Ò¶Áõ½ðÐÛÌÕºøÌØÕ¹   ¹²ÉÍ¿Í¼Ò²èÆ÷ÐÂÃÀÑ§</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/11/676826dad49e7c6bc421cc6705825486-600x400.jpg" />
-<h6>Ò¶Áõ½ðÐÛÀÏÊ¦Àú¾­ÎåÊ®ÄêµÄÅ¬Á¦¡¢×ÔÎÒÌôÕ½²»ê¡£¬ÒÔÆäÌÕÍÁÒÕÊõµÄ¶ÀÌØ·ç¸ñ£¬³É¾ÍÌÕµñÐ´ÒâµÄÐÂ¾³½ç¡£ (ÌÒÔ°¿Í¼Ò¾ÖÌá¹©)
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kztpea348/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/kztpea348/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/kztpea348/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/kztpea348/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/kztpea348/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å¶åˆ˜é‡‘é›„é™¶å£¶ç‰¹å±•  å…±èµå®¢å®¶èŒ¶å™¨æ–°ç¾Žå­¦</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/676826dad49e7c6bc421cc6705825486-600x400.jpg" />
+<h6>å¶åˆ˜é‡‘é›„è€å¸ˆåŽ†ç»äº”åå¹´çš„åŠªåŠ›ã€è‡ªæˆ‘æŒ‘æˆ˜ä¸è¾ï¼Œä»¥å…¶é™¶åœŸè‰ºæœ¯çš„ç‹¬ç‰¹é£Žæ ¼ï¼Œæˆå°±é™¶é›•å†™æ„çš„æ–°å¢ƒç•Œã€‚ (æ¡ƒå›­å®¢å®¶å±€æä¾›)
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê11ÔÂ03ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÐìÄËÒåÌ¨ÍåÌÒÔ°±¨µ¼£©<a href="https://github.com/lpbpi2994/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E5%B8%82%E5%AE%A2%E5%AE%B6%E4%BA%8B%E5%8A%A1%E5%B1%80.md">ÌÒÔ°ÊÐ¿Í¼ÒÊÂÎñ¾Ö</a>ÓÚÌÒÔ°ÊÐ<a href="https://github.com/lpbpi2994/djy/blob/master/gb/tag/%E5%AE%A2%E5%AE%B6%E6%96%87%E5%8C%96%E9%A6%86.md">¿Í¼ÒÎÄ»¯¹Ý</a>¾Ù°ì¡°ÐÄÎëÌÕ·çÆð£¬ºøÒÕÔÆ·ÉÑï¡ªÒ¶Áõ½ðÐÛÌÕºøÌØÕ¹¡±¿ªÕ¹µÄÒ¶Áõ½ðÐÛÀÏÊ¦£¬Àú¾­ÎåÊ®ÄêµÄÅ¬Á¦¡¢×ÔÎÒÌôÕ½²»ê¡£¬ÒÔÆäÌÕÍÁÒÕÊõµÄ¶ÀÌØ·ç¸ñ£¬³É¾ÍÌÕµñÐ´ÒâµÄÐÂ¾³½ç¡£Ò¶Áõ½ðÐÛ³öÉúÓÚ<a href="https://github.com/lpbpi2994/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E6%96%B0%E5%B1%8B.md">ÌÒÔ°ÐÂÎÝ</a>£¬ÏÈºóÊ¦´ÓÓÚÀîÔó·ªÓëÀîÃ·Ê÷´óÊ¦£¬¿Í¼Ò×¯ÖÊÆÓ×ÔÈ»µÄ»·¾³·ÕÎ§¶ÔÆä´´×÷Ó°ÏìÉõÉî¡£</p>
-<p>ÌÒÔ°¿Í¼ÒÊÂÎñ¾Ö³¤ºÎÃ÷¹â±íÊ¾£¬ÌÒÔ°¿Í¼ÒÊÂÎñ¾ÖËùÏ½Ö®ÌÒÔ°ÊÐ<a href="https://github.com/lpbpi2994/djy/blob/master/gb/tag/%E5%AE%A2%E5%AE%B6%E6%96%87%E5%8C%96%E9%A6%86.md">¿Í¼ÒÎÄ»¯¹Ý</a>ÉèÓÐÒôÀÖ¡¢ÎÄÑ§µÈ³£Éè¹Ý£¬»¹ÓÐÌØÕ¹ÊÒ×÷Îª¸÷Ê½Õ¹ÀÀÖ®ÓÃ£¬Ã¿Äê³ý¶¨ÆÚÍ¸¹ýÕ÷¼þÉó²é£¬°²ÅÅÒÕÊõÍÅÌå»ò¸öÈËÕ¹³öÓÅÐã×÷Æ·Íâ£¬Ö÷¶¯ÑûÇëÖØÁ¿¼¶¿Í¼®ÒÕÊõ¼ÒÕ¹³ö£¬ÀýÈçÇ°Á½Äê²ß°ì¿Í¼®´ú±íÐÔÒÕÊõ¼Ò¡°ÔøÏÖ³Î¾ÅÊ®¼ÍÄîÕ¹¡±¼°¡°´÷Îä¹âµÄË®Ä«ÃÀÑ§¡±Õ¹ÀÀ£¬¾ù»ñ¸÷½çÈÈÁÒ»ØÏì¡£</p>
-<figure id="11629804" style="width: 500px" class="wp-caption aligncenter"><img src="http://i.epochtimes.com/assets/uploads/2019/11/64bf939585a8f8ccdead311ac2dfd458-450x337.jpg" alt="Ò¶Áõ½ðÐÛÉÃ³¤µñËÜÊ÷¶Î¡¢ÐàÄ¾¼°Öñ½ÚµÈÐÎÃ²£¬ÄóËÜ¾«Ï¸¶ø´«Éñ£¬ÔìÐÍ¾ùºâ¶øÐ­µ÷£¬²¢µã×ºÎÏÅ£¡¢òáòæ¼°Ê÷ÍÜµÈÔªËØ¡£" width="500" /><figcaption class="wp-caption-text">Ò¶Áõ½ðÐÛÉÃ³¤µñËÜÊ÷¶Î¡¢ÐàÄ¾¼°Öñ½ÚµÈÐÎÃ²£¬ÄóËÜ¾«Ï¸¶ø´«Éñ£¬ÔìÐÍ¾ùºâ¶øÐ­µ÷£¬²¢µã×ºÎÏÅ£¡¢òáòæ¼°Ê÷ÍÜµÈÔªËØ¡££¨ÌÒÔ°¿Í¼Ò¾ÖÌá¹©£©</figcaption></figure>
-<p>Ò¶Áõ½ðÐÛÉÃ³¤½«ÌÕºøµñËÜ³ÉÊ÷¶Î¡¢ÐàÄ¾¼°Öñ½ÚµÄÐÎÃ²£¬ÄóËÜ¾«Ï¸¶ø´«Éñ£¬ÔìÐÍ¾ùºâ¶øÐ­µ÷£¬ºøÌåµã×ºÒÔÎÏÅ£¡¢òáòæ¼°Ê÷ÍÜµÈÔªËØ£¬¾ß²ã´Î±ä»¯ÒàÊÕ»­Áúµã¾¦Ö®Ð§£¬Å©´å¾°ÖÂ»ëÈ»Ìì³ÉµØÈÚÈëÆä×÷Æ·£¬²»µ«³äÂú»îÁ¦ÓëÉú»ú£¬¸üÕ¹ÏÖÖÁÇéÖÁÐÔµÄÃÀÑ§ÒÕ¾³¡£</p>
-<figure id="11629805" style="width: 500px" class="wp-caption aligncenter"><img src="http://i.epochtimes.com/assets/uploads/2019/11/a4f65ebf951653e0eddb6e98b9dc6234-450x337.jpg" alt="Ò¶Áõ½ðÐÛÉÃ³¤µñËÜÊ÷¶Î¡¢ÐàÄ¾¼°Öñ½ÚµÈÐÎÃ²£¬ÄóËÜ¾«Ï¸¶ø´«Éñ£¬ÔìÐÍ¾ùºâ¶øÐ­µ÷£¬²¢µã×ºÎÏÅ£¡¢òáòæ¼°Ê÷ÍÜµÈÔªËØ¡£" width="500" /><figcaption class="wp-caption-text">Ò¶Áõ½ðÐÛÉÃ³¤µñËÜÊ÷¶Î¡¢ÐàÄ¾¼°Öñ½ÚµÈÐÎÃ²£¬ÄóËÜ¾«Ï¸¶ø´«Éñ£¬ÔìÐÍ¾ùºâ¶øÐ­µ÷£¬²¢µã×ºÎÏÅ£¡¢òáòæ¼°Ê÷ÍÜµÈÔªËØ¡££¨ÌÒÔ°¿Í¼Ò¾ÖÌá¹©£©</figcaption></figure>
-<p>¡°ÐÄÎëÌÕ·çÆð£¬ºøÒÕÔÆ·ÉÑï¡ªÒ¶Áõ½ðÐÛÌÕºøÌØÕ¹¡±¼´ÈÕÆðÖÁ11ÔÂ27ÈÕÓÚÌÒÔ°ÊÐ¿Í¼ÒÎÄ»¯¹ÝA1¡¢T1ÌØÕ¹ÊÒÕ¹³ö£¬¹²Õ¹³ö°ÙÓà¼þ×÷Æ·²¢¹æ»®³ÉÁù´óÇøÓò£º°üº¬Ò¶ÁõÀÏÊ¦×ÔÑ¡Ö®¡°¾­µä£®ÒÕÐÄ¡±¡¢ÔçÆÚ×÷Æ·¡°ºøÐÎ£®Ä¾ÐÎ¡±¡¢×¢ÖØÔìÐÎÃÀÑ§µÄ¡°¿ÝÄ¾£®ÐÂÉú¡±¡¢¾«µñÈÕ³£Ð¡Æ·µÄ¡°ÌÕºø£®ÑÅ¼¯¡±¡¢·ÖÏíÖÆºøÐÄ·¨µÄ¡°ÐÄÎë£®ÌÕÔÆÒÕ¡±¼°·ÃÌ¸Ó°Æ¬¡°ºøÐÄ£®ÉÍÎö¡±¡£¾´ÑûÒÕÎÄ½çµÄºÃÓÑÃÇÒ»Í¬¸ÐÊÜÒ¶Áõ½ðÐÛµÄ²èÆ÷ÐÂÃÀÑ§£¬ÒÔ¼°¿Í¼ÒÒÕÊõ´´×÷Ô´Ô´²»¾øµÄ·áÅæÄÜÁ¿¡£¡ó</p>
-<p>ÔðÈÎ±à¼­£ºÀîÞ±</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´11æœˆ03æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…å¾ä¹ƒä¹‰å°æ¹¾æ¡ƒå›­æŠ¥å¯¼ï¼‰<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E5%B8%82%E5%AE%A2%E5%AE%B6%E4%BA%8B%E5%8A%A1%E5%B1%80.md#1">æ¡ƒå›­å¸‚å®¢å®¶äº‹åŠ¡å±€</a>äºŽæ¡ƒå›­å¸‚<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E5%AE%A2%E5%AE%B6%E6%96%87%E5%8C%96%E9%A6%86.md#1">å®¢å®¶æ–‡åŒ–é¦†</a>ä¸¾åŠžâ€œå¿ƒåžé™¶é£Žèµ·ï¼Œå£¶è‰ºäº‘é£žæ‰¬â€”å¶åˆ˜é‡‘é›„é™¶å£¶ç‰¹å±•â€å¼€å±•çš„å¶åˆ˜é‡‘é›„è€å¸ˆï¼ŒåŽ†ç»äº”åå¹´çš„åŠªåŠ›ã€è‡ªæˆ‘æŒ‘æˆ˜ä¸è¾ï¼Œä»¥å…¶é™¶åœŸè‰ºæœ¯çš„ç‹¬ç‰¹é£Žæ ¼ï¼Œæˆå°±é™¶é›•å†™æ„çš„æ–°å¢ƒç•Œã€‚å¶åˆ˜é‡‘é›„å‡ºç”ŸäºŽ<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E6%96%B0%E5%B1%8B.md#1">æ¡ƒå›­æ–°å±‹</a>ï¼Œå…ˆåŽå¸ˆä»ŽäºŽæŽæ³½è—©ä¸ŽæŽæ¢…æ ‘å¤§å¸ˆï¼Œå®¢å®¶åº„è´¨æœ´è‡ªç„¶çš„çŽ¯å¢ƒæ°›å›´å¯¹å…¶åˆ›ä½œå½±å“ç”šæ·±ã€‚</p>
+<p>æ¡ƒå›­å®¢å®¶äº‹åŠ¡å±€é•¿ä½•æ˜Žå…‰è¡¨ç¤ºï¼Œæ¡ƒå›­å®¢å®¶äº‹åŠ¡å±€æ‰€è¾–ä¹‹æ¡ƒå›­å¸‚<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E5%AE%A2%E5%AE%B6%E6%96%87%E5%8C%96%E9%A6%86.md#1">å®¢å®¶æ–‡åŒ–é¦†</a>è®¾æœ‰éŸ³ä¹ã€æ–‡å­¦ç­‰å¸¸è®¾é¦†ï¼Œè¿˜æœ‰ç‰¹å±•å®¤ä½œä¸ºå„å¼å±•è§ˆä¹‹ç”¨ï¼Œæ¯å¹´é™¤å®šæœŸé€è¿‡å¾ä»¶å®¡æŸ¥ï¼Œå®‰æŽ’è‰ºæœ¯å›¢ä½“æˆ–ä¸ªäººå±•å‡ºä¼˜ç§€ä½œå“å¤–ï¼Œä¸»åŠ¨é‚€è¯·é‡é‡çº§å®¢ç±è‰ºæœ¯å®¶å±•å‡ºï¼Œä¾‹å¦‚å‰ä¸¤å¹´ç­–åŠžå®¢ç±ä»£è¡¨æ€§è‰ºæœ¯å®¶â€œæ›¾çŽ°æ¾„ä¹åçºªå¿µå±•â€åŠâ€œæˆ´æ­¦å…‰çš„æ°´å¢¨ç¾Žå­¦â€å±•è§ˆï¼Œå‡èŽ·å„ç•Œçƒ­çƒˆå›žå“ã€‚</p>
+<p>å¶åˆ˜é‡‘é›„æ“…é•¿å°†é™¶å£¶é›•å¡‘æˆæ ‘æ®µã€æœ½æœ¨åŠç«¹èŠ‚çš„å½¢è²Œï¼Œæå¡‘ç²¾ç»†è€Œä¼ ç¥žï¼Œé€ åž‹å‡è¡¡è€Œåè°ƒï¼Œå£¶ä½“ç‚¹ç¼€ä»¥èœ—ç‰›ã€èœ¥èœ´åŠæ ‘è›™ç­‰å…ƒç´ ï¼Œå…·å±‚æ¬¡å˜åŒ–äº¦æ”¶ç”»é¾™ç‚¹ç›ä¹‹æ•ˆï¼Œå†œæ‘æ™¯è‡´æµ‘ç„¶å¤©æˆåœ°èžå…¥å…¶ä½œå“ï¼Œä¸ä½†å……æ»¡æ´»åŠ›ä¸Žç”Ÿæœºï¼Œæ›´å±•çŽ°è‡³æƒ…è‡³æ€§çš„ç¾Žå­¦è‰ºå¢ƒã€‚</p>
+<p>â€œå¿ƒåžé™¶é£Žèµ·ï¼Œå£¶è‰ºäº‘é£žæ‰¬â€”å¶åˆ˜é‡‘é›„é™¶å£¶ç‰¹å±•â€å³æ—¥èµ·è‡³11æœˆ27æ—¥äºŽæ¡ƒå›­å¸‚å®¢å®¶æ–‡åŒ–é¦†A1ã€T1ç‰¹å±•å®¤å±•å‡ºï¼Œå…±å±•å‡ºç™¾ä½™ä»¶ä½œå“å¹¶è§„åˆ’æˆå…­å¤§åŒºåŸŸï¼šåŒ…å«å¶åˆ˜è€å¸ˆè‡ªé€‰ä¹‹â€œç»å…¸ï¼Žè‰ºå¿ƒâ€ã€æ—©æœŸä½œå“â€œå£¶å½¢ï¼Žæœ¨å½¢â€ã€æ³¨é‡é€ å½¢ç¾Žå­¦çš„â€œæž¯æœ¨ï¼Žæ–°ç”Ÿâ€ã€ç²¾é›•æ—¥å¸¸å°å“çš„â€œé™¶å£¶ï¼Žé›…é›†â€ã€åˆ†äº«åˆ¶å£¶å¿ƒæ³•çš„â€œå¿ƒåžï¼Žé™¶äº‘è‰ºâ€åŠè®¿è°ˆå½±ç‰‡â€œå£¶å¿ƒï¼Žèµæžâ€ã€‚æ•¬é‚€è‰ºæ–‡ç•Œçš„å¥½å‹ä»¬ä¸€åŒæ„Ÿå—å¶åˆ˜é‡‘é›„çš„èŒ¶å™¨æ–°ç¾Žå­¦ï¼Œä»¥åŠå®¢å®¶è‰ºæœ¯åˆ›ä½œæºæºä¸ç»çš„ä¸°æ²›èƒ½é‡ã€‚â—‡</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæŽè–‡</p>
 
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/11/3/n11629802.htm">Ò¶Áõ½ðÐÛÌÕºøÌØÕ¹   ¹²ÉÍ¿Í¼Ò²èÆ÷ÐÂÃÀÑ§</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/10/30/n11621640.htm">ÍÆ¶¯¿Í¼ÒÎÄ»¯³ÉÎª³ÇÊÐÁÁµã  ÌÒÔ°ÕùÈ¡ÖÐÑëÖ§³Ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/21/n11537428.htm">ÔÆÁÖºÃ¿ÍÕæºÃå¼ Ì¤ÌúÂíÓÎÁÁµã¿Í×¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/14/n11519773.htm">»³¾ÉÓ°ÏñÕ¹  ÕÒ»ØÚ¯°²¿Í¼ÒÈË¹²Í¬¼ÇÒä</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/16/n11457933.htm">Ò©Ñ§Ê«ÈË-Õ²±ùÎï¼þÕ¹ ²ÌÆä²ý²ÎÓë¸ÐÐ»ÒÇÊ½</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/3/n11159946.htm">ÌÕµñÖ®Éù?Ä¾ÒÕ»ØÏì      Ð»ºè´ïÌÕ´É¹¤ÒÕÌØÕ¹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/15/n11046523.htm">ÌÒÔ°È«¹ú¿Í¼ÒÈÕ  ¸ü´´ÐÂÌåÑé¿Í¼Ò¡¢°®ÉÏ¿Í¼Ò</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/10/28/n11618129.htm">×¨¼Ò½ÒÕæÏà£ºÒ»´øÒ»Â·¿ÖÒý·¢ÖÐ¹ú½ðÈÚÎ£»ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11628317.htm">ËÄÖÐÈ«»á½áÊø ÖÐ¹²½Ó°àÈËÔµºÎÎÞÏÂÎÄ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/30/n11623245.htm">¡¾Ö±²¥»Ø·Å¡¿11.2ÇóÔ®¹ú¼Ê¼¯»á ¸Û¾¯×·²¶¿¹ÒéÕß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11629334.htm">Íõ½¡ÁÖ¶ù×ÓÍõË¼´ÏÇå¿ÕÎ¢²© ÍøÂç·è´«</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11610224.htm">¸¸Ç×ÁÙÖÕÖ´ÒâÎÊËýÒª1000¿éÇ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11610675.htm">ËïÖÐÉ½ÇÉÃî»Ø´ð ÈÃ´«ËµÖÐµÄ´óÀÐÅõ¸¹´óÐ¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11610229.htm">³ö¼Ò²»¶ÝÊÀ ¸¨ÖúÃ÷³É×æµÃÌìÏÂµÄ¹ÖÉ®µÀÑÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/29/n11620112.htm">¡¾Èý¹úÓ¢ÐÛ¡¿Ö®Èý£º²Ü²ÙÓÄÄ¬ °®Ð¦°®¿Þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11627147.htm">ÓõÈ¡ÏûÁÖÖ£¼ÒÈËÓ¢¹ú¹ú¼® ÍøÂçÇ©Ãû³¬12Íò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11626688.htm">»ªÒá¾ÞÉÌÁõÌØ×ôÓëÃÀ¹úºÍ½â ½»³ö7ÒÚ×Ê²ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11626577.htm">ÓÐ¹ØÖÐ¹²ËÄÖÐÈ«»áµÄ´«ÑÔÊÇÕæ»¹ÊÇ¼Ù£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/30/n11622424.htm">¡¾Èý¹úÓ¢ÐÛ¡¿Ö®ËÄ £º²Ü²ÙµÄÎåÉ«´ó°ô°ô´òË­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11626043.htm">¡¾ÅÄ°¸¾ªÆæ¡¿ËÄÖÐÈ«»áºóÏã¸ÛÍø½û 23ÌõÖØÏÖ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11628256.htm">¡¾ÅÄ°¸¾ªÆæ¡¿¸ÛÈË³Ö¾ÃÕ½ ºÍÀí·ÇÒþÐÎÕóÓªÇ¿´ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11623979.htm">Ôâ¶ùÊÖÖ¸²åÑÛÇò ³ÂÏÉÃ·É¹Ö×ÑÛÕÕÌ¾£ººÚ°µÈÕ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11628658.htm">ElkieÓ­21ËêÉúÈÕ ×Óè¤ÓëÊæ»ªÒ»ÆðÎªËýÇìÉú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11626421.htm">ËÄ´¨³èÎï¿§·È¹Ý½«Ð¡¹·È¾³ÉÐÜÃ¨ ÍøÃñÅÚºä</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625725.htm">²»ÊÇÇ×ÉúÊ¤ËÆÇ×Éú ¶Ô¼ÌÅ®ÊÓÈç¼º³öµÄÃ÷ÐÇÃÇ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11627888.htm">±»µË³¬±ðÖÂ¶ú»·ÅªãÂ ËïÙ³Ïëµ½¿ê×ÓÊéÇ©¹Îðð°å</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/2/15/n11046523.md#1">æ¡ƒå›­å…¨å›½å®¢å®¶æ—¥  æ›´åˆ›æ–°ä½“éªŒå®¢å®¶ã€çˆ±ä¸Šå®¢å®¶</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/4/3/n11159946.md#1">é™¶é›•ä¹‹å£°?æœ¨è‰ºå›žå“      è°¢é¸¿è¾¾é™¶ç“·å·¥è‰ºç‰¹å±•</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/8/16/n11457933.md#1">è¯å­¦è¯—äºº-è©¹å†°ç‰©ä»¶å±• è”¡å…¶æ˜Œå‚ä¸Žæ„Ÿè°¢ä»ªå¼</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/9/14/n11519773.md#1">æ€€æ—§å½±åƒå±•  æ‰¾å›žè¯å®‰å®¢å®¶äººå…±åŒè®°å¿†</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/9/21/n11537428.md#1">äº‘æž—å¥½å®¢çœŸå¥½å¯® è¸é“é©¬æ¸¸äº®ç‚¹å®¢åº„</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/10/30/n11621640.md#1">æŽ¨åŠ¨å®¢å®¶æ–‡åŒ–æˆä¸ºåŸŽå¸‚äº®ç‚¹  æ¡ƒå›­äº‰å–ä¸­å¤®æ”¯æŒ</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488389.md#1">é˜²æ´ªä¿æŠ¤å‡çº§ å…´ä¸°è·¯æŽ’æ°´æ”¹å–„å·¥ç¨‹å®Œå·¥å¯ç”¨</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485471.md#1">è£æ€»æ¡ƒå›­åˆ†é™¢ç²¾å‡†éº»é†‰  æ–°æ­¦å™¨æ‰‹æœ¯å®‰å…¨åŠ åˆ†</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484035.md#1">1å²ç”·ç«¥é€›å…¬å›­è¿·é€” å¹³é•‡åˆ†å±€å¥³è­¦ååŠ©è¿”å®¶</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483844.md#1">å…¨å›½ç¾å®³é˜²æ•‘è”ç³»ä¼šæŠ¥ é½èšæ¡ƒå›­å¸‚é˜²ç¾æ•™è‚²é¦†</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/lpbpi2994/djy/blob/master/gb/19/11/3/n11629802.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/lpbpi2994/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/lpbpi2994/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/lpbpi2994/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/2/n11629364.md#1" target="_blank">139å·å›šçŠ¯â€”â€”çº¢è‰²å½±æ˜Ÿèµµä¸¹çš„å‡„æƒ¨äººç”Ÿ</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">è—å­—çŸ³ è•´å¤©æœº</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/3/n10687820.md#1" target="_blank">ä¸€ä½ä¸­å›½èŠ±å­£å°‘å¥³ç»™å¥¶å¥¶çš„é‚£ä¸ªå»</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/14/n12474369.md#1">æ—¥æœ¬å‡ºçŽ°â€œUFOç©ºæˆ˜â€ç”»é¢ å¤šä¸ªè¿½èµ¶ä¸€ä¸ª</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/2/14/n11869946.md#1">å¤§ç–«ä¸‹è§£æ•‘æœ‰é“ åŽ†å²å¯ç¤ºå¸¦æ‚¨é—¯è¿‡ä¸­å…±è‚ºç‚Ž</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/16/n12479879.md#1">æ›¾é¢„è¨€å·æ™®å½“é€‰ ä¼ æ•™å£«ï¼šä¸Šå¸æ´¾å¤©ä½¿åŠ©è¿žä»»</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/30/n12440550.md#1">ã€Šåœ£ç»ã€‹ä¸Žã€ŠæŽ¨èƒŒå›¾ã€‹é¢„è¨€çš„åº”éªŒä¸Žå˜æ¢1</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/3/n12378281.md#1">ã€è¥¿å®‰äº‹å˜?è’‹å®‹å¤«å¦‡ã€‘å¤©é™ç¥žè°• ä½¿å‘½ä¹‹è¡Œ</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487770.md#1">ã€è¿œè§å¿«è¯„ã€‘æ‹œç™»å®¶ä¸‘é—»4è¿žçˆ† ä¸­å…±äººè´¨å¤–äº¤</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486847.md#1">ã€çè¨€çœŸè¯­ã€‘æ¢é”¦ç¥¥ï¼šæ‹œç™»ä¸‘é—»æ›ä¸­å…±é æ¸¯æ¼‚ç™½</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487059.md#1">ã€æœ‰å†‡æžé”™ã€‘ä¸€å¸¦ä¸€è·¯é­æ¯›æ€æƒ³æ‰“å‡»</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483848.md#1">ç”°äº‘ï¼šç”µè„‘é—¨å‘é…µ æ‹œç™»ç«žé€‰ç»ç†è‡ªæ›æ°‘è°ƒä¸å®ž</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484807.md#1">ã€å½¹æƒ…æœ€å‰çº¿ã€‘çŽ‹å²å±±å‘½è¿éš¾æ–™ æ–°æž—å½ªäº‹ä»¶æçŽ°</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484808.md#1">å“ˆè¨å…‹æ–¯å¦çˆ†äº¨ç‰¹?æ‹œç™»ä¸‘é—» æ¶‰åŠå…‹é‡Œå¥³å„¿</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484792.md#1">æ´ªé‡‘å®æ‹„æ‹æ–è¿‘ç…§æ›å…‰ ç½‘æ°‘æƒŠè®¶</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484953.md#1">ç« å­æ€¡äº§åŽé¦–ç§€ å‘é™…çº¿ä¸Šç§»å¼•çƒ­è®®</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12485042.md#1">é™ˆå¤å‡†æ—¶ä¸ºå‘¨è¿…åº†ç”Ÿ è¿žç»­11å¹´ä»Žæœªä¸­æ–­</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICEå®šå»¶å¿ƒç†ä¸å®‰ æš‚ä¸å‚ä¸Žæ­£è§„äºŒè¾‘ç­‰æ´»åŠ¨</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486080.md#1">ä¸å°èŠ¹å–å‡åŒ…éœ€å…¥ç‹±æœåˆ‘ åˆ¤åˆ‘2å¹´åŠå®šè°³</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/6/n12455916.md#1">è¿åŠ¨åŽåƒå¯¹ä¿®å¤è‚Œè‚‰ã€æ”¹å–„ç–²åŠ³ è¥å…»å¸ˆæŽ¨3é£Ÿè°±</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484089.md#1">ä¸¤å¤§ä¸€å°çš„ç™½é²¸ææµ… ä¿„ç½—æ–¯ç”·å­èŠ±7å°æ—¶è¥æ•‘</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486194.md#1">ç¾Žé‡Œæ ¹å·èˆªæ¯æ‰“å‡»ç¾¤è¿”å›žå—æµ· ç¼©æ—¶çŸ­ç‰‡é‡Šå‡º</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485655.md#1">å…¨çƒ15å›½æ°‘è°ƒï¼šå°æ¹¾äººæœ€å¸Œæœ›å·æ™®å½“é€‰</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483851.md#1">æ„å¤§åˆ©å°é•‡ä»…ä½2äºº ä½†åšæŒæˆ´å£ç½©ä¿æŒè·ç¦»</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/kztpea348/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/kztpea348/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/11/3/n11629802.htm">å¶åˆ˜é‡‘é›„é™¶å£¶ç‰¹å±•  å…±èµå®¢å®¶èŒ¶å™¨æ–°ç¾Žå­¦</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kztpea348/djy/blob/master/gb/19/11/3/n11629802.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/kztpea348/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
